--- a/page1.html
+++ b/page1.html
@@ -32,7 +32,7 @@
         <div class="menu-list">
             <h2>ENTRÉES</h2>
             <ul>
-                <li>
+                <li class="parent">
                         <div class="menu-list__description">
                             <h3>Fricassée d'escargot</h3>
                             <div class="description">
