--- a/page2.html
+++ b/page2.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="public/css/style.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <title>Oh My Food</title>
-        <script src="https://kit.fontawesome.com/75565831d5.js" crossorigin="anonymous"></script>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>Oh My Food</title>
+    <script src="https://kit.fontawesome.com/75565831d5.js" crossorigin="anonymous"></script>
+</head>
+
 <body>
     <header>
         <div class="header-menu">
             <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-            <img src="public/img/ohmyfood.png" alt="logo oh my food"/>
+            <img src="public/img/ohmyfood.png" alt="logo oh my food" />
         </div>
     </header>
     <div class="menu">
         <div>
-            <img src="public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée"/>
+            <img src="public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée" />
         </div>
-        <div class="menu--background"> 
-        <div class="menu__description">
-            <h1>La note enchantée</h1>
-            <div class="menu__description heart--size">
-                <i class="far fa-heart"></i>
+        <div class="menu--background">
+            <div class="menu__description">
+                <h1>La note enchantée</h1>
+                <div class="menu__description heart--size">
+                    <i class="far fa-heart"></i>
+                </div>
             </div>
-        </div>
-        <div class="menu-list">
-            <h2>ENTRÉES</h2>
-            <ul>
-                <li>
-                    <a>
+            <div class="menu-list">
+                <h2>ENTRÉES</h2>
+                <ul>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Raviole de foie gras</h3>
                             <div class="description">
@@ -42,10 +43,8 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-                <li>
-                    <a>
+                    </li>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Caviar osciètre</h3>
                             <div class="description">
@@ -54,10 +53,8 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-                <li>
-                    <a>
+                    </li>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Homard et espuma de potiron</h3>
                             <div class="description">
@@ -66,10 +63,8 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-                <li>
-                    <a>
+                    </li>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Foie gras de canard cuit entier</h3>
                             <div class="description">
@@ -78,15 +73,13 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="menu-list">
-            <h2>PLATS</h2>
-            <ul>
-                <li>
-                    <a>
+                    </li>
+                </ul>
+            </div>
+            <div class="menu-list">
+                <h2>PLATS</h2>
+                <ul>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Noix de coquilles Saint-Jacques</h3>
                             <div class="description">
@@ -95,10 +88,8 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-                <li>
-                    <a>
+                    </li>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Langoustine poêlée</h3>
                             <div class="description">
@@ -107,10 +98,8 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-                <li>
-                    <a>
+                    </li>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Mijoté de queue de boeuf</h3>
                             <div class="description">
@@ -119,15 +108,13 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="menu-list">
-            <h2>DESSERTS</h2>
-            <ul>
-                <li>
-                    <a>
+                    </li>
+                </ul>
+            </div>
+            <div class="menu-list">
+                <h2>DESSERTS</h2>
+                <ul>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Macaron noisette et chocolat</h3>
                             <div class="description">
@@ -136,22 +123,18 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-                <li>
-                    <a>
-                    <div class="menu-list__description">
-                        <h3>Baba au rhum revisité</h3>
-                        <div class="description">
-                            <p>Avec son coulis de citron</p>
-                            <p class="price">22€</p>
+                    </li>
+                    <li class="parent">
+                        <div class="menu-list__description">
+                            <h3>Baba au rhum revisité</h3>
+                            <div class="description">
+                                <p>Avec son coulis de citron</p>
+                                <p class="price">22€</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-                <li>
-                    <a>
+                        <div class=check-box><i class="fas fa-check-circle"></i></div>
+                    </li>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Tarte au citron meringuée</h3>
                             <div class="description">
@@ -160,18 +143,17 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <a href="#">
-            <div class="page-btn">
-                <div class="btn">
-                    <p>Commander</p>
-                </div>
+                    </li>
+                </ul>
             </div>
-        </a>
-    </div>
+            <a href="#">
+                <div class="page-btn">
+                    <div class="btn">
+                        <p>Commander</p>
+                    </div>
+                </div>
+            </a>
+        </div>
     </div>
     <footer>
         <h2>ohmyfoood</h2>
@@ -187,4 +169,5 @@
         <p>Contact</p>
     </footer>
 </body>
+
 </html>
