--- a/page3.html
+++ b/page3.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="public/css/style.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <title>Oh My Food</title>
-        <script src="https://kit.fontawesome.com/75565831d5.js" crossorigin="anonymous"></script>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>Oh My Food</title>
+    <script src="https://kit.fontawesome.com/75565831d5.js" crossorigin="anonymous"></script>
+</head>
+
 <body>
     <header>
         <div class="header-menu">
             <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-            <img src="public/img/ohmyfood.png" alt="logo oh my food"/>
+            <img src="public/img/ohmyfood.png" alt="logo oh my food" />
         </div>
     </header>
     <div class="menu">
         <div>
-            <img src="public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="à la française"/>
+            <img src="public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="à la française" />
         </div>
-        <div class="menu--background">  
-        <div class="menu__description">
-            <h1>À la française</h1>
-            <div class="menu__description heart--size">
-                <i class="far fa-heart"></i>
+        <div class="menu--background">
+            <div class="menu__description">
+                <h1>À la française</h1>
+                <div class="menu__description heart--size">
+                    <i class="far fa-heart"></i>
+                </div>
             </div>
-        </div>
-        <div class="menu-list">
-            <h2>ENTRÉES</h2>
-            <ul>
-                <li>
-                    <a>
+            <div class="menu-list">
+                <h2>ENTRÉES</h2>
+                <ul>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Tartare de poulpe acidulé</h3>
                             <div class="description">
@@ -42,10 +43,8 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-                <li>
-                    <a>
+                    </li>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Velouté de légumes d'antan</h3>
                             <div class="description">
@@ -54,10 +53,8 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-                <li>
-                    <a>
+                    </li>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Soupe à l'oignon</h3>
                             <div class="description">
@@ -66,15 +63,13 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="menu-list">
-            <h2>PLATS</h2>
-            <ul>
-                <li>
-                    <a>
+                    </li>
+                </ul>
+            </div>
+            <div class="menu-list">
+                <h2>PLATS</h2>
+                <ul>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Coquilles Saint-Jacques</h3>
                             <div class="description">
@@ -83,10 +78,8 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-                <li>
-                    <a>
+                    </li>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Magret de canard</h3>
                             <div class="description">
@@ -95,10 +88,8 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-                <li>
-                    <a>
+                    </li>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Pigeonneau d'Ille-et-Vilaine</h3>
                             <div class="description">
@@ -107,15 +98,13 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="menu-list">
-            <h2>DESSERTS</h2>
-            <ul>
-                <li>
-                    <a>
+                    </li>
+                </ul>
+            </div>
+            <div class="menu-list">
+                <h2>DESSERTS</h2>
+                <ul>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Pétales de violettes glacés</h3>
                             <div class="description">
@@ -124,10 +113,8 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-                <li>
-                    <a>
+                    </li>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Fondant au chocolat</h3>
                             <div class="description">
@@ -136,10 +123,8 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-                <li>
-                    <a>
+                    </li>
+                    <li class="parent">
                         <div class="menu-list__description">
                             <h3>Millefeuille croustillant</h3>
                             <div class="description">
@@ -148,18 +133,17 @@
                             </div>
                         </div>
                         <div class=check-box><i class="fas fa-check-circle"></i></div>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <a href="#">
-            <div class="page-btn">
-                <div class="btn">
-                    <p>Commander</p>
-                </div>
+                    </li>
+                </ul>
             </div>
-        </a>
-    </div>
+            <a href="#">
+                <div class="page-btn">
+                    <div class="btn">
+                        <p>Commander</p>
+                    </div>
+                </div>
+            </a>
+        </div>
     </div>
     <footer>
         <h2>ohmyfoood</h2>
@@ -175,4 +159,5 @@
         <p>Contact</p>
     </footer>
 </body>
+
 </html>
