--- a/index.html
+++ b/index.html
@@ -17,103 +17,107 @@
     <header>
         <img src="public/img/ohmyfood.png" alt="logo oh my food" />
     </header>
-            <div class="flex-home-desktop-tablet">
-                <div class="localisation">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <p>Paris, Belleville</p>
-                </div>
-                <div class="home">
-                    <div class="title-part-1">Réservez le menu qui</div>
-                    <div class="title-part-2">vous convient</div>
-                    <p>Découvrez des restaurants d'exception,</p>
-                    <p>sélectionnés par nos soins</p>
-                    <div class="home-btn">
-                        <div class="btn">
-                            <p>Explorer nos restaurants</p>
-                        </div>
-                    </div>
+    <div class="flex-home-desktop-tablet">
+        <div class="localisation">
+            <i class="fas fa-map-marker-alt"></i>
+            <p>Paris, Belleville</p>
+        </div>
+        <div class="home">
+            <div class="title-part-1">Réservez le menu qui</div>
+            <div class="title-part-2">vous convient</div>
+            <p>Découvrez des restaurants d'exception,</p>
+            <p>sélectionnés par nos soins</p>
+            <div class="home-btn">
+                <div class="btn">
+                    <p>Explorer nos restaurants</p>
                 </div>
             </div>
-            <div class="functioning-filter">
-                <h2>Fonctionnement</h2>
-                    <ol>
-                        <li><div class="functioning-filter--icon">
-                                <i class="fas fa-mobile-alt fa-1.5x"></i>
-                            </div>
-                            <p>Choisissez un restaurant</p>
-                        </li>
-                        <li><div class="functioning-filter--icon">
-                                <i class="fas fa-list-ul"></i>
-                            </div>
-                            <p>Composez votre menu</p>
-                        </li>
-                        <li><div class="functioning-filter--icon">
-                                <i class="fas fa-store"></i>
-                            </div>
-                            <p>Dégustez au restaurant</p>
-                        </li>
-                    </ol>
-            </div>
+        </div>
+    </div>
+    <div class="functioning-filter">
+        <h2>Fonctionnement</h2>
+        <ol>
+            <li>
+                <div class="functioning-filter--icon">
+                    <i class="fas fa-mobile-alt fa-1.5x"></i>
+                </div>
+                <p>Choisissez un restaurant</p>
+            </li>
+            <li>
+                <div class="functioning-filter--icon">
+                    <i class="fas fa-list-ul"></i>
+                </div>
+                <p>Composez votre menu</p>
+            </li>
+            <li>
+                <div class="functioning-filter--icon">
+                    <i class="fas fa-store"></i>
+                </div>
+                <p>Dégustez au restaurant</p>
+            </li>
+        </ol>
+    </div>
     <section>
         <h2>Restaurants</h2>
         <article>
             <div class="flex-card-tablet-and-desktop">
                 <div class="flex-card">
-                    <a href="page1.html" class="restaurant-prev">
-                        <span>Nouveau</span>
-                        <img src="public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
-                        <div class="restaurant-prev__description">
-                            <div href="page1.html">
+                    <div class="restaurant-prev">
+                        <a href="page1.html">
+                            <span>Nouveau</span>
+                            <img src="public/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" />
+                            <div class="restaurant-prev__description">
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </div>
-                            <div class="heart-icon">
-                                <i class="far fa-heart"></i>
-                            </div>
+                        </a>
+                        <div class="heart-icon">
+                            <i class="far fa-heart"></i>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <a href="page2.html" class="restaurant-prev">
-                    <span>Nouveau</span>
-                    <img src="public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" />
-                    <div class="restaurant-prev__description">
-                        <div>
+                <div class="restaurant-prev">
+                    <a href="page2.html">
+                        <span>Nouveau</span>
+                        <img src="public/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" />
+                        <div class="restaurant-prev__description">
                             <h3>La note enchantée</h3>
                             <p>Charonne</p>
                         </div>
-                        <div class="heart-icon">
-                            <i class="far fa-heart"></i>
-                        </div>
+                    </a>
+                    <div class="heart-icon">
+                        <i class="far fa-heart"></i>
                     </div>
-                </a>
+                </div>
             </div>
             <div class="flex-card-tablet-and-desktop">
                 <div class="flex-card">
-                    <a href="page3.html" class="restaurant-prev">
-                        <img src="public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="à la française" />
-                        <div class="restaurant-prev__description">
-                            <div>
+                    <div class="restaurant-prev">
+                        <a href="page3.html">
+                            <img src="public/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="à la française" />
+                            <div class="restaurant-prev__description">
                                 <h3>À la française</h3>
                                 <p>Cité Rouge</p>
                             </div>
-                            <div class="heart-icon">
-                                <i class="far fa-heart"></i>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <a href="page4.html" class="restaurant-prev">
-                    <img src="public/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" />
-                    <div class="restaurant-prev__description">
-                        <div>
-                            <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt</p>
-                        </div>
+                        </a>
                         <div class="heart-icon">
                             <i class="far fa-heart"></i>
                         </div>
                     </div>
-                </a>
+                </div>
+                <div class="restaurant-prev">
+                    <a href="page4.html">
+                        <img src="public/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="Le délice des sens" />
+                        <div class="restaurant-prev__description">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                        </div>
+                    </a>
+                    <div class="heart-icon">
+                        <i class="far fa-heart"></i>
+                    </div>
+                </div>
             </div>
         </article>
     </section>
@@ -131,4 +135,5 @@
         <p>Contact</p>
     </footer>
 </body>
+
 </html>
