--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                         </a>
                         <div class="heart-icon">
                             <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
                         </div>
                     </div>
                 </div>
@@ -87,6 +88,7 @@
                     </a>
                     <div class="heart-icon">
                         <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </div>
             </div>
@@ -102,6 +104,7 @@
                         </a>
                         <div class="heart-icon">
                             <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
                         </div>
                     </div>
                 </div>
@@ -116,6 +119,7 @@
                     </a>
                     <div class="heart-icon">
                         <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </div>
                 </div>
             </div>
