--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <p>Devenir partenaire</p>
         </div>
         <p>Mentions légales</p>
-        <p>Contact</p>
+        <p><a href="mailto:ohmyfood@gmail.com">Contact</a></p>
     </footer>
 </body>
 
