--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <div class="loader">
+        Bienvenue
+    </div>
     <header>
         <img src="public/img/ohmyfood.png" alt="logo oh my food" />
     </header>
