--- a/page3.html
+++ b/page3.html
@@ -153,7 +153,7 @@
             <p>Devenir partenaire</p>
         </div>
         <p>Mentions légales</p>
-        <p>Contact</p>
+        <p><a href="mailto:ohmyfood@gmail.com">Contact</a></p>
     </footer>
 </body>
 
